<resources>
    <string name="app_name" translatable="false">AlooDelevery</string>
    <string name="TOKEN" translatable="false">token</string>
    <string name="FIRST_TIME" translatable="false">first_time</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="question">Question</string>
    <string name="profile">Profile</string>
    <string name="start_your_serves">Start the service that suits you </string>
    <string name="tv_cat_1">Restaurants</string>
    <string name="tv_cat_1_desc">We provide you with most of the different  restaurants  and cafes  according to your taste</string>
    <string name="my_rides">My Rides</string>
    <string name="is_login" translatable="false">IS_LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_now">Register Now</string>
    <string name="have_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="registration_text">Would you like to register as a Restaurant, Supermarket or Pharmacy please contact us via:   knowing that working hours from 8–4pm</string>
    <string name="ok">OK</string>
    <string name="file_type" translatable="false">PDF, JPG, PNG</string>
    <string name="trial_text1">your order was delivered</string>
    <string name="trial_text2">thank you</string>
    <string name="trial_btn">track order</string>
    <string name="tv_cat_2">Supermarket</string>
    <string name="tv_cat_2_desc">You can view the products of the supermarket or your supplies with us in the application</string>
    <string name="tv_cat_3">Pharmacies</string>
    <string name="tv_cat_3_desc">We provide you with most of the well-known pharmacies that meet your needs</string>
    <string name="search">search</string>
    <string name="McDonald">McDonald\'s</string>
    <string name="servis">American, sandwiches and fast food</string>
    <string name="time">45  minutes</string>
    <string name="price">price</string>
    <string name="minimum">Minimum:</string>
    <string name="number_of_rating" translatable="false">(20)</string>
    <string name="calories">Calories</string>
    <string name="SR">S.R 24</string>
    <string name="meal_name">Grilled chicken meal</string>
    <string name="desc">Descreption</string>
    <string name="desc_text">Contains Gluten, Milk, Sesame Seeds, Soybeans May Contains Eggs, Peanuts, Sulfur Dioxide, Celery, Mustard</string>
    <string name="add_card">add to cadt</string>
    <string name="big_price">big \n24 RL</string>
    <string name="small_price">small \n17 RL</string>
    <string name="according_to_price">According to Price</string>
    <string name="high_to_low">from high \n to low</string>
    <string name="low_to_high">from low \n to high</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="delivery_addresses">Delivery Addresses</string>
    <string name="aloo_wallet">Aloo Wallet</string>
    <string name="favourite">Favourite</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log_out_text">Would you like to log out?</string>
    <string name="cart">Cart</string>
    <string name="edit">Edit</string>
    <string name="contact_address">Contact address</string>
    <string name="day" translatable="false">delivery day</string>
    <string name="time_delevary" translatable="false">Delivery time</string>
    <string name="code" translatable="false">code</string>
    <string name="order_details">Order details</string>
    <string name="asking_price">Asking price : </string>
    <string name="delivery_charge">Delivery Charge : </string>
    <string name="value_added" translatable="false">Value Added : </string>
    <string name="number_price">17 RL</string>
    <string name="totle">Totel</string>
    <string name="payment_methods" translatable="false">payment methods</string>
    <string name="confirmation">Confirm</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="english" translatable="false">English</string>
    <string name="clients_service">Clients service</string>
    <string name="common_questions">Common Questions</string>
    <string name="about_app">About the app</string>
    <string name="privacy_policy_conditions">Privacy policy and conditions</string>
    <string name="rate_app">Rate the app</string>
    <string name="add_photo">Add photo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="now">Now</string>
    <string name="notifications">Notifications</string>
    <string name="item_name">Almarai cheese with cream</string>
    <string name="privacy_policy">Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy Privacy Policy</string>
    <string name="email_address" translatable="false">support@Aloo.com</string>
    <string name="contact_number" translatable="false">0555555555</string>
    <string name="contact_whats">Contact - Whatsapp</string>
    <string name="linkedin" translatable="false">\@Aloo</string>
    <string name="answer">Answer</string>
    <string name="pay_status" translatable="false">Not yet paid</string>
    <string name="timeDate" translatable="false">25_10 / 12:30</string>
    <string name="order_status">Order status</string>
    <string name="payment_status" translatable="false">Payment status</string>
    <string name="payment_method" translatable="false">Payment method</string>
    <string name="restaurants">Restaurants</string>
    <string name="mcdonalds">Mcdonalds</string>
    <string name="supermarkets">Supermarkets</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="choose_supermarket">Please choose a supermarket</string>
    <string name="choose_restaurant">Please choose a restaurant</string>
    <string name="choose_pharmacy">Please choose a pharmacy</string>
    <string name="sent_delivered_handed" translatable="false">sent delivered handed</string>
    <string name="The_payment_was_made" translatable="false">The payment was made</string>
    <string name="order_number" translatable="false">Order number 3300</string>
    <string name="order_number_text">Order number</string>
    <string name="address">Address</string>
    <string name="order_tracking">track order</string>
    <string name="need_help">I need help</string>
    <string name="specify">Specify</string>
    <string name="restaurant_type">Restaurant type</string>
    <string name="language_text">The App will restart</string>
    <string name="restart">Restart</string>
    <string name="stay">Stay</string>
    <string name="title">Home</string>
    <string name="details">Al-fyrouz towers, Al-mashtal street, Gaza</string>
    <string name="new_location">Add new location</string>
    <string name="address_name">Address Name</string>
    <string name="specify_location">Specify location on map</string>
    <string name="balance">Balance</string>
    <string name="balance_text">0 SAR</string>
    <string name="menu">menu</string>
    <string name="help">Help</string>
    <string name="address_1">Gaza, Nadeem Street</string>
    <string name="address_2">Ammar Hassan, fifth floor</string>
    <string name="Pay" translatable="false">Pay now</string>
    <string name="card_owner_name">Name as shown on the card</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry_date">Expiry Date</string>
    <string name="card_cvv" translatable="false">CVV</string>
    <string name="driver_rating">Driver Rating</string>
    <string name="driver_name">Sohaib Hassan</string>
    <string name="some_notes">some notes</string>
    <string name="submit_evaluation">Submit evaluation</string>
    <string name="my_data">My Data</string>
    <string name="registration_conditions">Registration Conditions</string>
    <string name="join_driver">To join as a driver/delegate with us in the "Allo" application, you need:</string>
    <string name="conditions">1- First condition  2- The second condition  3- The third condition  4- The fourth condition  5- The fifth condition</string>
    <string name="agree_conditions">I agree to the terms and conditions</string>
    <string name="next">Next</string>
    <string name="toast_agree_conditions">You need to agree on the terms and conditions</string>
    <string name="id">ID Number</string>
    <string name="bank_iban_no">Bank IBAN Number</string>
    <string name="app_percentage">The application percentage (13%) will be deducted from the value of any trip</string>
    <string name="photo_id">ID Photo</string>
    <string name="photo_license">License Photo</string>
    <string name="photo_iban">Bank IBAN Photo</string>
    <string name="join_us">Join Us</string>
    <string name="data_sent">Your data has been successfully sent</string>
    <string name="data_verify">Data will be verified And We will reply to you within a day</string>
    <string name="phone_activation">Phone Activation</string>
    <string name="activation_sent">Activation code was sent to your phone</string>
    <string name="activation_text">Please enter the activation code here</string>
    <string name="have_activation_code">Didn\'t recieve an activation code?</string>
    <string name="resend">Resend</string>
    <string name="_10" translatable="false">10</string>
    <string name="rides_no">Rides Number</string>
    <string name="hours_no">Hours Number</string>
    <string name="income_avg">Income Average</string>
    <string name="_350">350 SAR</string>
    <string name="transfer_amount">Transfer amount </string>
    <string name="app_ratio">App Percentage</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="week">This Week</string>
    <string name="month">This Month</string>
    <string name="year">This Year</string>
    <string name="show_according">Show according</string>
    <string name="client_rating">Client Rating</string>
    <string name="service_type">service type</string>
    <string name="delivery_harge">Delivery Charge:</string>
    <string name="journey_time">Journey time:</string>
    <string name="total_distance">Total distance:</string>
    <string name="supermarket_delivery">supermarket delivery</string>
    <string name="price_number">24 SAR</string>
    <string name="journey_time_number">20 minutes</string>
    <string name="total_distance_number">11 km</string>
    <string name="report_problem">Report a problem</string>
    <string name="meal_number">Number of meals 3</string>
    <string name="owner_meal">Sohaib Hassan</string>
    <string name="oder">Orde rNumber</string>
    <string name="nuber" translatable="false">24245</string>
    <string name="time_date" translatable="false">2020/2/1، PM 30:5</string>
    <string name="trans_no">trans no</string>
    <string name="reason">reason</string>
    <string name="refund">refund</string>
    <string name="tell_us_why_cacel">Please tell us why did you choose to cancel the order</string>
</resources>