<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/home_fragment">


    <fragment
        android:id="@+id/home_fragment"
        android:name="com.prography.sw.aloocustomer.ui.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/help_fragment"
        android:name="com.prography.sw.aloocustomer.ui.fragment.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/account_fragment"
        android:name="com.prography.sw.aloocustomer.ui.fragment.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

</navigation>