<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:fontFamily="@font/tajawal_300"
        android:text="@string/time_date"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/tv_trans_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:fontFamily="@font/tajawal_300"
        android:text="@string/trans_no"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/_13sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rounded_15_gray_lined_gray"
        android:elevation="@dimen/_3sdp"
        android:orientation="vertical"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/tajawal_400"
                android:text="@string/name"
                android:textColor="@color/text_color_red"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/tajawal_500"
                android:text="@string/price_number"
                android:textColor="@color/green"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/tajawal_300"
            android:text="@string/refund"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tv_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/tajawal_300"
            android:text="@string/reason"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</LinearLayout>