<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ProgressBar
        android:id="@+id/loading"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminateTint="@color/text_color_red"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bc_lines"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/tv_date_time_titel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_95sdp"
                android:background="@drawable/rounder_20_red"
                android:elevation="@dimen/_3sdp"
                android:gravity="center"
                android:paddingStart="@dimen/_7sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:text="@string/timeDate"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    tools:context=".ui.activity.MapsActivity" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_Requester_address"
                android:layout_width="0dp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_30sdp"

                android:background="@drawable/rounded_27_gray_tv_back"
                android:gravity="start|center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/address_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintEnd_toEndOf="@+id/card"
                app:layout_constraintStart_toStartOf="@id/card"
                app:layout_constraintTop_toBottomOf="@id/card" />

            <TextView
                android:id="@+id/my_address"
                android:layout_width="0dp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/rounded_27_gray_tv_back"
                android:gravity="start|center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/address_2"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintEnd_toEndOf="@+id/tv_Requester_address"
                app:layout_constraintStart_toStartOf="@+id/tv_Requester_address"
                app:layout_constraintTop_toBottomOf="@id/tv_Requester_address" />


            <TextView
                android:id="@+id/tv_Name_order_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/owner_meal"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_address" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="1.0"
                android:theme="@style/RatingBar"
                app:layout_constraintBottom_toBottomOf="@id/tv_Name_order_owner"
                app:layout_constraintStart_toEndOf="@id/tv_Name_order_owner"
                app:layout_constraintTop_toTopOf="@id/tv_Name_order_owner" />

            <TextView
                android:id="@+id/number_reate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/number_of_rating"
                android:textSize="@dimen/_9sdp"
                app:layout_constraintBottom_toBottomOf="@id/rating_bar"
                app:layout_constraintStart_toEndOf="@id/rating_bar"
                app:layout_constraintTop_toTopOf="@id/rating_bar" />

            <LinearLayout
                android:id="@+id/cnte_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/my_address"
                app:layout_constraintTop_toBottomOf="@id/number_reate">

                <TextView
                    android:id="@+id/tv_service_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/service_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/tv_asking_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/asking_price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/tv_delivery_harge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/delivery_harge"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />


                <TextView
                    android:id="@+id/tv_journey_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/journey_time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/tv_total_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/total_distance"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/cnte_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/my_address"

                app:layout_constraintTop_toBottomOf="@id/number_reate">

                <TextView
                    android:id="@+id/service_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/supermarket_delivery"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/asking_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/price_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/delivery_harge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/price_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />


                <TextView
                    android:id="@+id/journey_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/journey_time_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/total_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/total_distance_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                android:text="@string/oder"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toStartOf="@id/cnte_1"
                app:layout_constraintTop_toBottomOf="@id/cnte_1" />

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuber"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="@id/cnte_2"
                app:layout_constraintTop_toTopOf="@+id/tv_order_number" />


            <TextView
                android:id="@+id/tv_order_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/order_status"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toStartOf="@id/tv_order_number"
                app:layout_constraintTop_toBottomOf="@id/tv_order_number" />

            <TextView
                android:id="@+id/tv_orderr_numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="@id/cnte_2"
                app:layout_constraintTop_toTopOf="@+id/tv_order_details" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_my_rider_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/btn_report_problem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_order_details"
                tools:itemCount="2"
                tools:listitem="@layout/item_order_details" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_report_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/rounded_30_trans_line_red"
                android:text="@string/report_problem"
                android:textColor="@color/purple_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_my_rider_details" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>